Finalizacion la cabecera con diseno azul

--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -8,6 +8,21 @@ body
     padding: 0;
 }
 
+#cabecera
+{
+    background-color:  #33a;
+    box-shadow: 0px 5px 30px 0px rgba(0,0,0,0.75);
+    color: white;
+    font-weight: bold;
+    margin:0;
+    padding: 0.5em;
+}
+#cabecera #tagline
+{
+    padding: 1em 0 0 0;
+    font-weight: normal;
+    font-size: 0.8em;
+}
 #container 
 {
     width: 70%;
