--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,5 +1,6 @@
 body
 {
+    background: black;
     color: #333;
     text-align: center;
     font-family: "Arial";
@@ -10,13 +11,19 @@ body
 
 #cabecera
 {
-    background-color:  #33a;
-    box-shadow: 0px 5px 30px 0px rgba(0,0,0,0.75);
+    background:#37488b;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
     color: white;
     font-weight: bold;
     margin:0;
     padding: 0.5em;
 }
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: niddle;
+}
+
 #cabecera #tagline
 {
     padding: 1em 0 0 0;
@@ -35,4 +42,10 @@ body
 #container h1 
 {
     font-size: 20px;
+}
+
+#post
+{
+    background: white;
+    padding: 1em;
 }
